cargo_error.log
    Checking aleph_zero v0.1.0 (/home/jonathan.correa/Projects/ALEPH)
error[E0063]: missing field `bio_context` in initializer of `CortexInput`
  --> src/core/inner_voice.rs:31:25
   |
31 | ...nput = CortexInput {
   |           ^^^^^^^^^^^ missing `bio_context`

warning: variable does not need to be mutable
  --> src/core/genome.rs:52:22
   |
52 | ...     let mut rng = rand::threa...
   |             ----^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `rng`
  --> src/core/genome.rs:52:22
   |
52 | ...     let mut rng = rand::threa...
   |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_rng`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `samples_len`
   --> src/senses/ears.rs:254:33
    |
254 | ...   let samples_len = buffer.l...
    |           ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_samples_len`

warning: unused variable: `tx_thought`
  --> src/actuators/voice.rs:55:28
   |
55 | ...tring, tx_thought: Sender<Thou...
   |           ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_tx_thought`

For more information about this error, try `rustc --explain E0063`.
warning: `aleph_zero` (bin "aleph_zero") generated 4 warnings
error: could not compile `aleph_zero` (bin "aleph_zero") due to 1 previous error; 4 warnings emitted
